# ASR-TTS-RAG-Pipeline

./: .gitignore  README.md  main.py  pyproject.toml
conf/: config.yaml
data/audio/: question.m4a
data/docs/: about_me.txt  brawl.txt
src/: asr.py  main.py  rag.py  tts.py
