[project]
name = "asr-tts-rag-pipeline"
version = "0.1.0"
description = "ASR-RAG-TTS pipeline."
readme = "README.md"
authors = [{ name = "Abhyudit Singh", email = "abhyudit.singh@research.iiit.ac.in" }]
requires-python = ">=3.13"
dependencies = [
    "hydra-core>=1.3.2",
    "loguru>=0.7.3",
    "openai-whisper>=20250625",
]
